# abatement-crawler

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
abatement_crawler/: __init__.py  applicability.py  captcha.py  cli.py  config.py  crawler.py  decomposition.py  export.py  extraction.py  ingestion.py  models.py  normalisation.py  quality.py  relevance.py  search.py  seeder.py  snowball.py  storage.py  synthesis.py  taxonomy.py
abatement_crawler/web/: __init__.py  app.py
abatement_crawler/web/templates/: applicable_categories.html  base.html  captcha_queue.html  captcha_resolve.html  categories.html  config.html  crawl.html  export.html  index.html  result_detail.html  results.html  seed.html
config/: config.example.yaml
tests/: test_decomposition.py  test_models.py  test_normalisation.py  test_quality.py  test_relevance.py  test_synthesis.py
